# react-native-turbo-encryption

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  aes256-support.patch  lefthook.yml  package.json  react-native-turbo-encryption.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/turboencryption/: TurboEncryptionModule.kt  TurboEncryptionPackage.kt
cpp/: AESWrapper.cpp  AESWrapper.hpp  NativeTurboEncryptionTurboModule.cpp  NativeTurboEncryptionTurboModule.h  react-native-turbo-encryption.cpp  react-native-turbo-encryption.h
example/: app.json  package.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/turboencryption/example/: MainActivity.kt  (+1 more)
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/TurboEncryptionExample/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TurboEncryptionExample.xcodeproj/: project.pbxproj
example/ios/TurboEncryptionExample.xcodeproj/xcshareddata/xcschemes/: TurboEncryptionExample.xcscheme
example/ios/TurboEncryptionExample.xcworkspace/: contents.xcworkspacedata
example/ios/TurboEncryptionExampleTests/: TurboEncryptionExampleTests.m
example/src/: App.tsx
ios/: TurboEncryption.h  TurboEncryption.mm  onLoad.mm
scripts/: copyGeneratedFiles.js
src/: NativeTurboEncryption.ts  index.tsx
